Empty state - done

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Plantilla para creación de artículos para Blog - v.0.1.2 beta</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
+    <script src="https://unpkg.com/feather-icons"></script>
+
     <meta name="viewport" content="width=device-width, user-scalable=no">
+
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
+
+    <div class="encabezado">
+      <div class='left'>
+        <div class='avatar'></div>
+      </div>
+      <div class='center'>Blogger Mate</div>
+      <div class='right'><i data-feather='settings'></i></div>
+    </div>
 
     <div class="tabs">
       <div class="tab tab-plantilla">
